--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
 
     <application
+        android:name=".AppMode"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="StarShape"
